# weems

./: .envrc  .gitattributes  .gitignore  .gitmodules  Makefile  README.md  aio.py  flake.nix  main.py  pyproject.toml  reputation_data.json  weems.py
.weems/data/: opensnitch_rl_state.pkl
.weems/logs/: events.out.tfevents.1746500944.fwdora.684501.0  events.out.tfevents.1746501711.fwdora.696405.0  events.out.tfevents.1746501808.fwdora.697705.0  events.out.tfevents.1746502305.fwdora.700541.0
.weems/models/: opensnitch_rl_model.pt
analysis/: connections.csv
analysis/5-percent-bias-tweak/: connections.csv
analysis/5-percent-bias-tweak/logs/: events.out.tfevents.1746488294.fwdora.584581.0  events.out.tfevents.1746488314.fwdora.584761.0
analysis/5-percent-bias-tweak/models/: opensnitch_rl_model.pt
analysis/5-percent-block-bias/data/: opensnitch_rl_state.pkl
analysis/5-percent-block-bias/log_analysis_report/: connections.csv
analysis/5-percent-block-bias/logs/: events.out.tfevents.1746485180.fwdora.569534.0  events.out.tfevents.1746485228.fwdora.570104.0  (+1 more)
data/: applications.yaml  bad_applications.yaml  good_applications.yaml  good_destinations.yaml  opensnitch.sqlite
proto/: Makefile  opensnitch_pb2.py  opensnitch_pb2_grpc.py
scripts/: format_project.sh  logvis.py  scrub  stublistener.py  train  unify_quotes.sh  visuals.py
tests/: agtests.py  test_classifier.py  test_opensnitch_agent.py
utils/: Agent.py  Classification.py  Classification_sklearn.py  Classifier.py  DMU.py  DataLoader.py  DbusOpensnitch.py  DecisionEngine.py  DecisionStructure.py  FakeDbus.py  LogAnalysis.py  Lookup.py  NetworkUtils.py  OpensnitchAgent.py  OpensnitchInterface.py  Pathconf.py  Sim.py  UI.py  __init__.py  agent.py  badsim.py  stublistener.py
