[tool.uv.sources]
torch = { index = "pytorch" }

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cpu"

[project]
name = "weems"
version = "0.1.0"
description = "Weems is a smart, adaptive, network filter that maximizes network traffic utility"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "nltk>=3.9.1",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]
