[tool.uv.sources]
torch = { index = "pytorch" }

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cpu"

[project]
name = "weems"
version = "0.1.0"
description = "Weems is a smart, adaptive, network filter that maximizes network traffic utility"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    #"dbus-python>=1.4.0",
    "meson-python>=0.17.1",
    "nltk>=3.9.1",
    "numpy>=2.1.2",
    "psutil>=7.0.0",
    #"systemd>=0.17.1",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "setuptools>=70.2.0",
]
